2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : optimized ReadAttributeNode() to not call
	  MoveToAttribute() unneccesarily (call it only when ReadNode() is
	  called on an attribute node).

2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs :
	  in get_InnerText(), avoid extraneous StringBuilder creation.

2006-01-27  Atsushi Enomoto <atsushi@ximian.com>

	* XmlIteratorNodeList.cs : new file for XmlNodeList implementation.
	  It does not iterate all nodes in advance.
	* XmlNode.cs : use XmlIteratorNodeList in SelectNodes().

2006-01-26  Atsushi Enomoto <atsushi@ximian.com>

	* XmlWriter.cs : Dispose() is protected.

2006-01-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNamedNodeMap.cs : lazily create internal ArrayList. Thanks to
	  Joshua Tauberer for the hint.

2006-01-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : ToString(TimeSpan) should return valid duration
	  for TimeSpan.Zero, rather than "P". Fixed bug #77350

2006-01-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNameEntryCache.cs XmlNameEntry.cs :
	  Made name entry fields as not read-only. Added Update() to reset
	  members. Its semantics of Equals() is changed.
	  Now entry cache is based on Hashtable rather than ArrayList.
	  It saves heavy iteration in ArrayList.

2006-01-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNameEntryCache.cs XmlNameEntry.cs XmlDocument.cs :
	  Add Hash field to find name entry quickly.
	  In XmlNameEntryCache make use of name table (it is totally
	  unused there though).

2006-01-16  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : handle Ticks. Fixed bug #77252.

2006-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : Fixed bug #77082.
	  When the state was Start, after WriteProcessingInstruction() and
	  WriteWhitespace() change it to Prolog.
	  After WriteDocType() set state to WriteState.Element.

2006-01-12  Atsushi Enomoto <atsushi@ximian.com>
